--- a/package.json
+++ b/package.json
@@ -9,17 +9,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "dotenv": "^16.0.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
+    "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.0",
     "morgan": "^1.10.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pth": "^1.0.0"
   },
   "description": "",
   "devDependencies": {
+    "bcrypt": "^5.1.0",
     "nodemon": "^2.0.20"
   }
 }
